--- a/source/_posts/关于我/关于我.md
+++ b/source/_posts/关于我/关于我.md
@@ -9,11 +9,11 @@ tags: [about]
 category_bar: ["leetcode"]
 ---
 # 博客链接
-[链接](https://leiqichn.top/)
+[链接](https://leiqi.top/)
 
 ![](../../imgs/白鸽.png)
 # 关于我
 
-大家好，我是Lei Qi, 毕业于复旦大学 生物信息专业，任职于华为，担任软件开发工程师一职。本站是为了方便自己记录学习过程，和大家交流经验而建。也是为了学习web, 实现拥有自己一个网站的小目标，才有了本站。欢迎大家多多交流学习，祝大家学习愉快~
+大家好，我是Lei Qi, 毕业于复旦大学，任职于华为，主要做Golang、Python软件开发。本站是为了方便自己记录学习过程，和大家交流经验而建。也是为了学习web, 实现拥有自己一个网站的小目标，才有了本站。欢迎大家多多交流学习，祝大家学习愉快~
 
 
