feat: 添加公众号

--- a/source/_posts/关于我/关于我.md
+++ b/source/_posts/关于我/关于我.md
@@ -16,4 +16,10 @@ category_bar: ["leetcode"]
 
 大家好，我是Lei Qi, 毕业于复旦大学，任职于华为，主要做Golang、Python软件开发。本站是为了方便自己记录学习过程，和大家交流经验而建。也是为了学习web, 实现拥有自己一个网站的小目标，才有了本站。欢迎大家多多交流学习，祝大家学习愉快~
 
+# 爱生活，爱学习，爱分享
+
+希望在这里能开辟出我的第二宇宙，与大家一起分享，学习，进步！
+# 欢迎关注微信公众号~
+![](../../imgs/qrcode.jpg)
+
 
