feat: 自动更新版权年份

--- a/source/_posts/labuladong速成记录/数据结构设计专题.md
+++ b/source/_posts/labuladong速成记录/数据结构设计专题.md
@@ -29,7 +29,7 @@ category_bar: true
 # [146. LRU 缓存](https://leetcode.cn/problems/lru-cache/)
 
 请设计 最近 最少使用 约束的数据结构
-
+![](../../imgs/Pasted%20image%2020250309231207.png)
 
 
 20250307 39 分钟调试完成，需要确认的是，List初始化需要为空，而不是orderList: make([]int, capacity) 这个是创建capacity个0
@@ -88,26 +88,11 @@ func (this *LRUCache) Put(key int, value int) {
 		this.orderList = append(this.orderList, key)
     }
 }
+```
 
+## O(1) 方法双向列表，map 中直接保存列表元素指针，
 
-
-
-
-
-
-
-
-
-
-
-
-
-# O(1) 方法双向列表，map 中直接保存列表元素指针，
-
-
-···go
-
-
+```go
 type LRUCache struct {
 	cacheMaps map[int]*list.Element
 	orderList *list.List
